# compass

./: .gitignore  CITATION.cff  README.md
.github/: FUNDING.yml
paper/: paper_draft.md
paper/arxiv/: main.tex  paper_en.md
paper/figures/scripts/: gen_fig_class_lifecycle.py  gen_fig_decision_flow.py  gen_fig_oscillation_compare.py  gen_fig_social_cost_field.py
scripts/: check_paper_numbers.py
sim/: CMakeLists.txt  README.md  package.xml
sim/config/: nav2_compass.yaml  ros_gz_bridge.yaml
sim/launch/: sim_bringup.launch.py
sim/scripts/: people_gt_publisher.py  reactive_pedestrian.py  send_straight_goal.py
sim/urdf/: diff_bot.urdf.xacro
sim/worlds/: compass_office.sdf
src/: README.md
src/compass_core/: CMakeLists.txt  package.xml
src/compass_core/include/compass_core/: accumulator.hpp  cost_evaluator.hpp  decision_core.hpp  decision_state.hpp  env_query.hpp  knobs.hpp  safety.hpp  tie_breaker.hpp  topo_class.hpp  types.hpp
src/compass_core/src/: accumulator.cpp  cost_evaluator.cpp  decision_core.cpp  safety.cpp  tie_breaker.cpp  topo_class.cpp  version.cpp
src/compass_core/test/: test_accumulator.cpp  test_cost.cpp  test_decision_core.cpp  test_safety.cpp  test_smoke.cpp  test_state.cpp  test_tie_breaker.cpp  test_topo_class.cpp
src/compass_eval/: CMakeLists.txt  package.xml
src/compass_eval/include/compass_eval/: harness.hpp
src/compass_eval/results/: R1_ablation.md  R3_latency.md  R5_rho_sweep.md  README.md  ablation_raw.csv
src/compass_eval/src/: main.cpp
src/compass_msgs/: CMakeLists.txt  package.xml
src/compass_msgs/msg/: People.msg  Person.msg
src/compass_nav2/: CMakeLists.txt  compass_controller_plugin.xml  package.xml
src/compass_nav2/config/: compass_params.yaml
src/compass_nav2/include/compass_nav2/: compass_controller.hpp  costmap_env_query.hpp  path_tracking.hpp  people_conversion.hpp
src/compass_nav2/src/: compass_controller.cpp  costmap_env_query.cpp  path_tracking.cpp  people_conversion.cpp
src/compass_nav2/test/: test_path_tracking.cpp  test_people_conversion.cpp  test_plugin_load.cpp
