<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>compass_sim</name>
  <version>0.1.0</version>
  <description>
    COMPASS (Commit-and-Cross) 결정 컨트롤러를 위한 최소 Gazebo Harmonic 시뮬레이션 테스트베드.
    실내 사무실 세계 + 차동 구동 로봇(2D lidar) + ros_gz_bridge + Nav2 controller_server 브링업.
    대상: ROS 2 Jazzy + Gazebo Harmonic (gz sim 8).
  </description>
  <maintainer email="kangjmo91@gmail.com">Kang Jung Mo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>compass_nav2</exec_depend>
  <exec_depend>compass_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
