<?xml version="1.0"?>
<package format="3">
  <name>compass_core</name>
  <version>0.1.0</version>
  <description>COMPASS 결정 계층 코어 (ROS2 비의존)</description>
  <maintainer email="kangjmo91@gmail.com">Kang Jung Mo</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
